# restore_mnist

./: README.md  main.py  pyproject.toml
restore_mnist/: data_handling.py  inference.py  model.py
